--- a/accordion.css
+++ b/accordion.css
@@ -5,6 +5,11 @@
  
 } */
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   width: 80%;
   max-width: 600px;
@@ -54,4 +59,21 @@ button.accordion.is-open {
 h2:has(> button) {
   margin-bottom: 0;
   margin-top: 0;
+}
+
+.note {
+  background: lightgoldenrodyellow;
+  display: block;
+  margin: 0;
+  padding: 15px;
+  text-align: center;
+}
+
+.wb-inv {
+  clip: rect(1px,1px,1px,1px);
+  height: 1px;
+  margin: 0;
+  overflow: hidden;
+  position: absolute;
+  width: 1px;
 }
